# KingpinProtocol

./: CMakeLists.txt  GOALS.md  README.md
include/: basic.h  buffer.h  chacha20.h  checksum.h  cipher.h  core.h  ec-types.h  ec.h  err.h  errstr.h  hmac.h  init.h  kingpin.h  kp.h  proto-structs.h  proto.h  rng.h  session.h  socket.h  str.h  struct.h
include/kp/: buffer.h  checksum.h  cipher.h  core.h  ec.h  errstr.h  hmac.h  init.h  proto.h  rng.h  session.h  sha256.h  socket.h  str.h
include/kp/cipher/: chacha20.h  chachapoly_aead.h  poly1305.h
include/kp/types/: basic.h  ec-types.h  err.h  kp.h  proto-structs.h  struct.h
include/types/: basic.h  ec-types.h  enum.h  err.h  kp.h  proto-structs.h  struct.h  x25519.h
source/kp/: buffer.c  chacha20.c  checksum.c  core.c  ec.c  errstr.c  init.c  kmac.c  proto.c  rng.c  session.c  sha256.c  socket.c  str.c
source/kp/cipher/: chacha20.c  chachapoly_aead.c  poly1305.c
test/: bench.c  client.c  hmac.c  main.c  server.c
